syntax = "proto3";

option csharp_namespace = "Proto.Requests.NoteTypes";

message NoteTypeProto {
  string note_type_id = 1;
  string name = 2;
  string color = 3;
}

message GetAllNoteTypesRequestProto {}

message GetAllNoteTypesResponseProto {
  repeated NoteTypeProto note_types = 1;
}

message GetNoteTypeByIdRequestProto {
  string note_type_id = 1; // UUID als String
}

service NoteTypesRequestService {
  rpc GetAllNoteTypes(GetAllNoteTypesRequestProto) returns (GetAllNoteTypesResponseProto);
  rpc GetNoteTypeById(GetNoteTypeByIdRequestProto) returns (NoteTypeProto);
}
